Fix some whitespace

--- a/app/styles/request.less
+++ b/app/styles/request.less
@@ -10,7 +10,8 @@ div.request {
     height: 100%;
   }
 
-  div.editor, div.response {
+  div.editor,
+  div.response {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -46,6 +47,7 @@ div.request {
 
 div.response {
   right: 0px;
+
   pre {
     position: absolute;
     bottom: 0px;
